Basic div and span

--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
   <h1 style="align-content: center;">Sandhya</h1>
   <p>2nd Year B.Tech CSE | GLA University, Mathura</p>
   <p>+91-7895052006 | sandhyas11011@gmail.com</p>
-  <img src="C:\Users\Hp\OneDrive\Documents\Desktop\MernStack\img.jpg", alt="Photo">
+  <img src="C:\Users\Hp\OneDrive\Documents\Desktop\MernStack\img.jpeg", alt="Photo">
 
   <h3>Education</h3>
   <table>
