Added ol and ul

--- a/nav.html
+++ b/nav.html
@@ -29,5 +29,25 @@
     <span style="background-color: cornflowerblue; padding: 20px; margin: 10px;">Box 4</span>
     <span style="background-color: brown; padding: 20px; margin: 10px;">Box 5</span>
     <span style="background-color: teal; padding: 20px; margin: 10px;">Box 6</span>
+
+    <br>
+    
+    <li>
+        <ol type="I">
+            <h1><u>Fruits</u></h1>
+            <li>Apple</li>
+            <li>Banana</li>
+            <li>Pineapple</li>
+            <li>Banana</li>
+        </ol>
+
+        <ul>
+            <h1><u>Vegetables</u></h1>
+            <li>Potato</li>
+            <li>Tomato</li>
+            <li>Carrot</li>
+            <li>Raddish</li>
+        </ul>
+    </li>
 </body>
 </html>
