Adding text alignment

--- a/Project1/index.html
+++ b/Project1/index.html
@@ -13,7 +13,7 @@
             <a href="contact.html">Contact</a>
         </div>
 
-        <h2>Our Chocolates</h2>
+        <h2 style="text-align: center;">Our Chocolates</h2>
 <main style="max-width:1000px; margin:0 auto; padding:20px;">
         <div style="display:grid; grid-template-columns:repeat(auto-fill, minmax(200px,1fr)); gap:20px;">
       
@@ -74,7 +74,7 @@
         <p style="margin:6px 0;"><strong>₹130</strong></p>
       </div>
 </main>
-  <footer style="text-align:center; padding:16px; font-size:14px; color:#555; border-top:1px solid #ccc; margin-top:30px;">
+  <footer style="text-align:center; padding:16px; font-size:14px; color:#140101; border-top:1px solid #ccc; margin-top:30px;">
     &copy; 2025 Choco Room. All rights reserved.
   </footer>
     </body>
