Adding embedding in html

--- a/form.html
+++ b/form.html
@@ -32,5 +32,6 @@
         </select>
         <textarea name="" id=""></textarea>
     </form>
+    <iframe src="https://en.wikipedia.org/wiki/Swami_Vivekananda" frameborder="500px">Ths is swami vivekanand article.</iframe>
 </body>
 </html>
