--- a/registrationpage.html
+++ b/registrationpage.html
@@ -20,7 +20,7 @@
         <input type="color" name="" id="">
 
         <!--Name should be same, to choose any 1 out of all-->
-        <h3>In which sports are you interested in?</h3>
+        <h4>In which sports are you interested in?</h4>
         <label for="1">Football</label>
         <input type="radio" name="23" id="1"><br>
         <label for="1">Volleyball</label>
@@ -46,7 +46,8 @@
             <option value="momos">momos</option>
             <option value="panipuri">panipuri</option>
         </select>
-        <textarea name="" id=""></textarea>
+        <!-- <textarea name="" id=""></textarea> -->
     </form>
+    
 </body>
 </html>
