Adding contact option , DAY-3

--- a/projectt1.html
+++ b/projectt1.html
@@ -24,15 +24,24 @@
         <h2>About Me</h2>
         <p>I am a web developer with a strong interset in creating accessible, efficient,and visually appealing websites. I eanjoy learning new skills and improving my coding skills.</p>
         <h2>Projects</h2>
-        <li>
-            <ul><strong>Portfolio Website :</strong> This websIte is a showcase of my work.</ul>
-            <ul><strong>Blog Platform :</strong> simple blog engine built with HTML and future CSS enhancements.</ul>
-            <ul><strong>Weather App :</strong>Displays weather info using sattic content.</ul>
-        </li>
+        <ul>
+            <li><strong>Portfolio Website:</strong> This website is a showcase of my work.</li>
+            <li><strong>Blog Platform:</strong> A simple blog engine built with HTML and future CSS enhancements.</li>
+            <li><strong>Weather App:</strong> Displays weather info using static content.</li>
+        </ul>
+        
+        <h2>Resume</h2>
+        
+        <h2>Experience</h2>
+        <ul>
+            <li>
+                Worked as a Web-Developoer at XYZ Company.
+            </li>
+        </ul>
         <h2>Contact</h2>
-        <a href="https://www.linkedin.com/in/sandhya-tomar-7b42672a9"> <img src="linkedin.png" alt="LinkedIn" style="width:50px; height:50px;"></a>
-        <a href="https://github.com/sandhya-tomar" target="_blank" rel="noopener noreferrer">GitHub Profile <img src="github.png" alt="GitHub" style="width:50px; height:50px;"></a>
-        <a href="https://resume">Resume</a>
-        <a href="mail">Mail</a>
+        <a href="https://www.linkedin.com/in/sandhya-tomar-7b42672a9"> <img src="linkedin.png" alt="LinkedIn" style="width:50px; height:40px;"></a>
+        <a href="https://github.com/sandhya-tomar"><img src="github.png" alt="GitHub" style="width:40px; height:30px;"></a>
+        <a href="https://leetcode.com/u/sandhya_811/"><img src="leetcode.png" style="width:30px; height:30px;"></a>
+        <a href="mail"><img src="mail.png" style="width:30px; height:30px;"></a>
     </body>
 </html>
