--- a/projectt1.html
+++ b/projectt1.html
@@ -31,17 +31,18 @@
         </ul>
         
         <h2>Resume</h2>
-        
+        <a href="https://resume.pdf">Resume.pdf</a>
+
         <h2>Experience</h2>
         <ul>
             <li>
-                Worked as a Web-Developoer at XYZ Company.
+                Worked as a Web-Development Intern at XYZ Company.
             </li>
         </ul>
         <h2>Contact</h2>
         <a href="https://www.linkedin.com/in/sandhya-tomar-7b42672a9"> <img src="linkedin.png" alt="LinkedIn" style="width:50px; height:40px;"></a>
         <a href="https://github.com/sandhya-tomar"><img src="github.png" alt="GitHub" style="width:40px; height:30px;"></a>
         <a href="https://leetcode.com/u/sandhya_811/"><img src="leetcode.png" style="width:30px; height:30px;"></a>
-        <a href="mail"><img src="mail.png" style="width:30px; height:30px;"></a>
+        <a href="https://mail.google.com/mail/u/0/#inbox"><img src="mail.png" style="width:30px; height:30px;"></a>
     </body>
 </html>
