--- a/ChessBoard/i.html
+++ b/ChessBoard/i.html
@@ -1,60 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chess Board</title>
-  <style>
-    table {
-      border-collapse: collapse;
-      margin: 20px auto;
-    }
-    td {
-      width: 60px;
-      height: 60px;
-    }
-    /* Black squares */
-    tr:nth-child(odd) td:nth-child(even),
-    tr:nth-child(even) td:nth-child(odd) {
-      background-color: black;
-    }
-    /* White squares */
-    tr:nth-child(odd) td:nth-child(odd),
-    tr:nth-child(even) td:nth-child(even) {
-      background-color: white;
-    }
-    h1 {
-      text-align: center;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Chess Board</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
-  <h1>Chess Board</h1>
-  <table border="1">
-    <tr>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-    <tr>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-    <tr>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-    <tr>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-    <tr>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-    <tr>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-    <tr>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-    <tr>
-      <td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-    </tr>
-  </table>
+    <h1 style="text-align: center;">Chess Board</h1>
+    <table border="2" height="500" width="400" align="center">
+        <tr>
+            <td><img src="rook.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="knight.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="bishop.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="king.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="queen.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="bishop.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="knight.png" alt="rook image" width="80" height="80"></td>
+            <td width="100" height="100" style="background-color: black;"><img src="rook.png" alt="rook image" width="80" height="80"></td>
+        </tr>
+        <tr>
+            <td style="background-color: black;"><img src="pawns.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="pawns.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="pawns.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="pawns.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="pawns.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="pawns.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="pawns.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="pawns.png" alt="rook image" width="80" height="80"></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td style="background-color: black;"></td>
+            <td></td>
+            <td style="background-color: black;"></td>
+            <td></td>
+            <td style="background-color: black;"></td>
+            <td></td>
+            <td style="background-color: black;"></td>
+        </tr>
+        <tr>
+            <td style="background-color: black;"></td>
+            <td></td>
+            <td style="background-color: black;"></td>
+            <td></td>
+            <td style="background-color: black;"></td>
+            <td></td>
+            <td style="background-color: black;"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td style="background-color: black;"></td>
+            <td></td>
+            <td style="background-color: black;"></td>
+            <td></td>
+            <td style="background-color: black;"></td>
+            <td></td>
+            <td style="background-color: black;"></td>
+        </tr>
+        <tr>
+            <td style="background-color: black;"></td>
+            <td></td>
+            <td style="background-color: black;"></td>
+            <td></td>
+            <td style="background-color: black;"></td>
+            <td></td>
+            <td style="background-color: black;"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td><img src="wpawns.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="wpawns.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="wpawns.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="wpawns.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="wpawns.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="wpawns.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="wpawns.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="wpawns.png" alt="rook image" width="80" height="80"></td>
+        </tr>
+        <tr>
+            <td><img src="wrook.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="wknight.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="wbishop.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="wking.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="wqueen.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="wbishop.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="wknight.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="wrook.png" alt="rook image" width="80" height="80"></td>
+        </tr>
+    </table>
 </body>
 </html>
