--- a/ChessBoard/index.html
+++ b/ChessBoard/index.html
@@ -8,47 +8,27 @@
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
-    <h1>Chess Board</h1>
-    <table border="2" height="700" width="700">
+    <h1 style="text-align: center;">Chess Board</h1>
+    <table border="2" height="500" width="500" align="center">
         <tr>
             <td><img src="rook.png" alt="rook image" width="80" height="80"></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td width="100" height="100" style="background-color: black;"></td>
+            <td style="background-color: black;"><img src="knight.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="bishop.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="king.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="queen.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="bishop.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="knight.png" alt="rook image" width="80" height="80"></td>
+            <td width="100" height="100" style="background-color: black;"><img src="rook.png" alt="rook image" width="80" height="80"></td>
         </tr>
         <tr>
-            <td width="100" height="100" style="background-color: black;"></td>
-            <td width="100" height="100"></td>
-            <td width="100" height="100" style="background-color: black;"></td>
-            <td width="100" height="100"></td>
-            <td width="100" height="100" style="background-color: black;"></td>
-            <td width="100" height="100"></td>
-            <td width="100" height="100" style="background-color: black;"></td>
-            <td width="100" height="100"></td>
-        </tr>
-        <tr>
-            <td width="100" height="100"></td>
-            <td width="100" height="100" style="background-color: black;"></td>
-            <td width="100" height="100"></td>
-            <td width="100" height="100" style="background-color: black;"></td>
-            <td width="100" height="100"></td>
-            <td width="100" height="100" style="background-color: black;"></td>
-            <td width="100" height="100"></td>
-            <td width="100" height="100" style="background-color: black;"></td>
-        </tr>
-        <tr>
-            <td width="100" height="100" style="background-color: black;"></td>
-            <td width="100" height="100"></td>
-            <td width="100" height="100" style="background-color: black;"></td>
-            <td width="100" height="100"></td>
-            <td width="100" height="100" style="background-color: black;"></td>
-            <td width="100" height="100"></td>
-            <td width="100" height="100" style="background-color: black;"></td>
-            <td width="100" height="100"></td>
+            <td width="100" height="100" style="background-color: black;"><img src="pawns.png" alt="rook image" width="80" height="80"></td>
+            <td width="100" height="100"><img src="pawns.png" alt="rook image" width="80" height="80"></td>
+            <td width="100" height="100" style="background-color: black;"><img src="pawns.png" alt="rook image" width="80" height="80"></td>
+            <td width="100" height="100"><img src="pawns.png" alt="rook image" width="80" height="80"></td>
+            <td width="100" height="100" style="background-color: black;"><img src="pawns.png" alt="rook image" width="80" height="80"></td>
+            <td width="100" height="100"><img src="pawns.png" alt="rook image" width="80" height="80"></td>
+            <td width="100" height="100" style="background-color: black;"><img src="pawns.png" alt="rook image" width="80" height="80"></td>
+            <td width="100" height="100"><img src="pawns.png" alt="rook image" width="80" height="80"></td>
         </tr>
         <tr>
             <td width="100" height="100"></td>
@@ -89,6 +69,26 @@
             <td width="100" height="100"></td>
             <td width="100" height="100" style="background-color: black;"></td>
             <td width="100" height="100"></td>
+        </tr>
+        <tr>
+            <td width="100" height="100"><img src="wpawns.png" alt="rook image" width="80" height="80"></td>
+            <td width="100" height="100" style="background-color: black;"><img src="wpawns.png" alt="rook image" width="80" height="80"></td>
+            <td width="100" height="100"><img src="wpawns.png" alt="rook image" width="80" height="80"></td>
+            <td width="100" height="100" style="background-color: black;"><img src="wpawns.png" alt="rook image" width="80" height="80"></td>
+            <td width="100" height="100"><img src="wpawns.png" alt="rook image" width="80" height="80"></td>
+            <td width="100" height="100" style="background-color: black;"><img src="wpawns.png" alt="rook image" width="80" height="80"></td>
+            <td width="100" height="100"><img src="wpawns.png" alt="rook image" width="80" height="80"></td>
+            <td width="100" height="100" style="background-color: black;"><img src="wpawns.png" alt="rook image" width="80" height="80"></td>
+        </tr>
+        <tr>
+            <td><img src="wrook.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="wknight.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="wbishop.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="wking.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="wqueen.png" alt="rook image" width="80" height="80"></td>
+            <td style="background-color: black;"><img src="wbishop.png" alt="rook image" width="80" height="80"></td>
+            <td><img src="wknight.png" alt="rook image" width="80" height="80"></td>
+            <td width="100" height="100" style="background-color: black;"><img src="wrook.png" alt="rook image" width="80" height="80"></td>
         </tr>
     </table>
 </body>
